--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="stickyMenu">
@@ -18,6 +19,15 @@
           <a href="#">Blog</a>
           <a href="#">About us</a>
           <a href="#">Contact</a>
+        </div>
+        <div class="stickySocialMedia">
+          <div class="fa fa-facebook"></div>
+          <div class="fa fa-twitter"></div>
+          <div class="fa fa-instagram"></div>
+        </div>
+        <div class="stickyLogin">
+          <p>Login</p>
+          <div class="loginPng"></div>
         </div>
       </div>
     </div>
