special offers finished

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -48,7 +48,151 @@
         </div>
       </div>
     </main>
-    <script type="text/javascript" src="app.js">
+    <div class="whatWeDo">
+      <div class="whatWeDoOne">
+        <div class="whatWeDoTextBox">
+          <p>What we Do</p>
+        </div>
+      </div>
+      <div class="whatWeDoTwo">
+        <div class="whatWeDoTextBox">
+          <p>What we Do</p>
+        </div>
+      </div>
+      <div class="whatWeDoThree">
+        <div class="whatWeDoTextBox">
+          <p>What we Do</p>
+        </div>
+      </div>
+    </div>
+    <section class="specialOfferSection">
+      <h2>SPECIAL OFFER</h2>
+      <p class="favoriteProductP">Your favorite prduct at Special price</p>
+      <div class="linePng"></div>
+      <!-- grid -->
+      <div class="gridContainer">
+        <div class="growth">
+          <div class="price">
+            <div class="priceNumbers">
+              <div class="redLine"></div>
+              <p><span id="oldPrice">$99,99</span> $56.00</p>
+              <p>montesinos women's perfume</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+            </div>
+          </div>
+        </div>
+        <div class="gridBox">
+          <div class="olay">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+          <div class="sede">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+          <div class="gucci">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+          <div class="cc">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+          <div class="parfume">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+          <div class="flower">
+            <div class="price">
+              <div class="priceNumbers">
+                <div class="redLine"></div>
+                <p><span id="oldPrice">$99,99</span> $56.00</p>
+                <p>Active Night Cream</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="greatBuysButton">
+          <p>MORE GREAT BUYS</p>
+          <div class="ArrowBox">
+            <div class="topArrow"></div>
+            <div class="botArrow"></div>
+          </div>
+        </div>
+      </div>
+      <!-- grid end -->
+    </section>
+    <section class="specialSales">
+      <div class="advertBox">
+        <div class="gradientYellow"></div>
+        <div class="pinkBag"></div>
+        <p>Notify me of special sales</p>
+        <button type="button" name="button" class="advertButton">My email</button>  
+      </div>
+    </section>
+
+
+
+    <script type="text/javascript" src="assets/js/app.js">
 
     </script>
   </body>
