carousel done! wp me

--- a/index.html
+++ b/index.html
@@ -181,12 +181,130 @@
       </div>
       <!-- grid end -->
     </section>
-    <section class="specialSales">
+    <div class="specialSales">
       <div class="advertBox">
         <div class="gradientYellow"></div>
         <div class="pinkBag"></div>
         <p>Notify me of special sales</p>
-        <button type="button" name="button" class="advertButton">My email</button>  
+        <button type="button" name="button" class="advertButton">My email</button>
+      </div>
+    </div>
+    <section class="newArrivals">
+      <h2>New Arrivals</h2>
+      <div class="carWraper">
+        <div class="leftImage"></div>
+        <div class="leftCarArrowBox" id="carOneLeftCarArrowBox">
+          <div class="arrow"></div>
+        </div>
+        <div class="carContainer">
+          <div class="blurBox"></div>
+          <div class="carousel" id="carouselOne">
+            <div class="carPicContainer">
+              <div class="firstCarPicOne"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicTwo"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicThree"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicFour"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicFive"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicSix"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicSeven"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+          </div>
+        </div>
+        <div class="rightCarArrowBox" id="carOneRightCarArrowBox">
+          <div class="arrow"></div>
+        </div>
+      </div>
+      <div class="greatBuysButton">
+        <p>MORE GREAT BUYS</p>
+        <div class="ArrowBox">
+          <div class="topArrow"></div>
+          <div class="botArrow"></div>
+        </div>
+      </div>
+    </section>
+    <!-- CAR TWO START -->
+    <section class="newArrivals bestSellers">
+      <h2>New Arrivals</h2>
+      <div class="carWraper">
+        <div class="leftImage"></div>
+        <div class="leftCarArrowBox" id="carTwoLeftCarArrowBox">
+          <div class="arrow"></div>
+        </div>
+        <div class="carContainer">
+          <div class="carousel" id="carouselTwo">
+            <div class="carPicContainer">
+              <div class="firstCarPicOne"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicTwo"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicThree"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicFour"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicFive"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicSix"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+            <div class="carPicContainer">
+              <div class="firstCarPicSeven"></div>
+              <p>$56.00</p>
+              <p>Active Night Cream</p>
+            </div>
+          </div>
+        </div>
+        <div class="rightCarArrowBox" id="carTwoRightCarArrowBox">
+          <div class="arrow"></div>
+        </div>
+      </div>
+      <div class="greatBuysButton">
+        <p>MORE GREAT BUYS</p>
+        <div class="ArrowBox">
+          <div class="topArrow"></div>
+          <div class="botArrow"></div>
+        </div>
       </div>
     </section>
 
