last shadow car

--- a/index.html
+++ b/index.html
@@ -250,13 +250,14 @@
     </section>
     <!-- CAR TWO START -->
     <section class="newArrivals bestSellers">
-      <h2>New Arrivals</h2>
+      <h2>Best Sellers</h2>
       <div class="carWraper">
         <div class="leftImage"></div>
         <div class="leftCarArrowBox" id="carTwoLeftCarArrowBox">
           <div class="arrow"></div>
         </div>
         <div class="carContainer">
+          <div class="blurBox"></div>
           <div class="carousel" id="carouselTwo">
             <div class="carPicContainer">
               <div class="firstCarPicOne"></div>
