third carousel complete

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       </div>
       <!-- grid end -->
     </section>
+
     <div class="specialSales">
       <div class="advertBox">
         <div class="gradientYellow"></div>
@@ -189,6 +190,7 @@
         <button type="button" name="button" class="advertButton">My email</button>
       </div>
     </div>
+
     <section class="newArrivals">
       <h2>New Arrivals</h2>
       <div class="carWraper">
@@ -308,6 +310,126 @@
         </div>
       </div>
     </section>
+
+    <section class="newArrivals trendingLooksSection">
+      <h2>Trending Looks</h2>
+      <div class="carWraper">
+        <div class="leftImage"></div>
+        <div class="trendingThreePicWraper">
+          <div class="trendingPicOne"></div>
+          <div class="trendingPicTwo"></div>
+          <div class="trendingPicThree"></div>
+        </div>
+      </div>
+      <div class="greatBuysButton">
+        <p>MORE GREAT BUYS</p>
+        <div class="ArrowBox">
+          <div class="topArrow"></div>
+          <div class="botArrow"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="instagramSection">
+      <div class="gridBoxSpecial">
+        <div class=""><h2>INSTAGRAM</h2></div>
+        <div class=""></div>
+        <div class=""></div>
+        <div class=""></div>
+        <div class=""></div>
+        <div class=""></div>
+      </div>
+    </section>
+
+    <section class="newsAndEventsSection">
+      <div class="pinkBox">
+        <h2>News and Events</h2>
+        <p class="favoriteProductP">From the world of Cosmetics and Fashion</p>
+        <div class="linePng"></div>
+        <div class="carThreeContainer">
+          <div class="carouselThree" id="carouselThree">
+            <div class="">
+              <div class="carDivOne"></div>
+              <div class="carThreeTextBox">
+                <div class="yellowSquareContainer">
+                  <div class="YellowSquare">
+                    <b><p>11</p></b>
+                    <b><p>Sep</p></b>
+                  </div>
+                  <div class="">
+                    <h3>A Totally New Color Pallette</h3>
+                    <p>Published by D.Cooper</p>
+                  </div>
+                </div>
+                <div class="loremIpsumText">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <b><a href="#">Read More</a></b>
+              </div>
+            </div>
+            <div class="">
+              <div class="carDivTwo"></div>
+              <div class="carThreeTextBox">
+                <div class="yellowSquareContainer">
+                  <div class="YellowSquare">
+                    <b><p>15</p></b>
+                    <b><p>Oct</p></b>
+                  </div>
+                  <div class="">
+                    <h3>Extracting colors from flowers</h3>
+                    <p>Published by D.Cooper</p>
+                  </div>
+                </div>
+                <div class="loremIpsumText">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <b><a href="#">Read More</a></b>
+              </div>
+            </div>
+            <div class="">
+              <div class="carDivThree"></div>
+              <div class="carThreeTextBox">
+                <div class="yellowSquareContainer">
+                  <div class="YellowSquare">
+                    <b><p>29</p></b>
+                    <b><p>Dec</p></b>
+                  </div>
+                  <div class="">
+                    <h3>100% Natural Beauty</h3>
+                    <p>Published by D.Cooper</p>
+                  </div>
+                </div>
+                <div class="loremIpsumText">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <b><a href="#">Read More</a></b>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carThreeArrowContainer">
+        <div id="carThreeLeftArrow"></div>
+        <div id="carThreeRightArrow"></div>
+      </div>
+
+    </section>
+
 
 
 
