maybe finish but a lot of touches left

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#">About us</a>
           <a href="#">Contact</a>
         </div>
-        <div class="stickySocialMedia">
+        <div class="stickySocialMedia" id="stickySocialMedia">
           <div class="fa fa-facebook"></div>
           <div class="fa fa-twitter"></div>
           <div class="fa fa-instagram"></div>
@@ -427,8 +427,62 @@
         <div id="carThreeLeftArrow"></div>
         <div id="carThreeRightArrow"></div>
       </div>
-
     </section>
+
+    <div class="bodyCream">
+      <div class="narrowDivBG"></div>
+      <div class="bodyCreamTextBox">
+        <h2>TODAY'S SPECIAL</h2>
+        <p>BB Body cream</p>
+      </div>
+      <div class="priceOff">
+        <p><b>80%</b> </p>
+        <p><b>off</b> </p>
+      </div>
+      <div class="BBcream"></div>
+      <div class="regularPriceTextBox">
+        <p>Regular Price:<span>$35.00</span></p>
+        <p>Sales Price:<span>$7.00</span></p>
+        <a href="#"><b>MORE GREAT BUYS</b> </a>
+      </div>
+    </div>
+
+    <div class="needHelpSection">
+      <nav>
+        <div class="">
+          <h4>Need Help?</h4>
+          <p>NailsPro@NailPro.com</p>
+          <p>217-225-2874</p>
+        </div>
+        <div class="">
+          <h4>Products</h4>
+        </div>
+        <div class="">
+          <h4>Pages</h4>
+          <a href="#">Home</a> <br>
+          <a href="#">Shop</a> <br>
+          <a href="#">Blog</a> <br>
+          <a href="#">About us</a> <br>
+          <a href="#">Contact us</a>
+        </div>
+      </nav>
+      <div class="stickySocialMedia">
+        <div class="fa fa-facebook"></div>
+        <div class="fa fa-twitter"></div>
+        <div class="fa fa-instagram"></div>
+      </div>
+        <div class="advertBox">
+          <div class="gradientYellow"></div>
+          <div class="pinkBag"></div>
+          <p>Notify me of special sales</p>
+          <button type="button" name="button" class="advertButton">My email</button>
+        </div>
+    </div>
+
+    <footer>
+      <div class="nailsPng"></div>
+      <p><span>&#169;</span> 2018 NailsPro INC &nbsp; Terms of Service &nbsp; Privacy Policies</p>
+    </footer>
 
 
 
