making mobile in progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <!-- sticky start -->
     <div class="stickyMenu">
       <div class="stickyMenuInside">
         <div class="stickyTodaysSpecial">
@@ -29,8 +30,14 @@
           <p>Login</p>
           <div class="loginPng"></div>
         </div>
+        <div class="burgerMenuMobile"><!-- burger display only for mobile -->
+          <div class=""></div>
+          <div class=""></div>
+          <div class=""></div>
+        </div>
       </div>
     </div>
+    <!-- sticky end -->
     <main>
       <div class="nailsPng"></div>
       <p class="numberCover">507-580-9273</p>
@@ -47,7 +54,12 @@
           <p>GO</p>
         </div>
       </div>
+      <div class="makeAppointentMobile"><!-- display only for mobile -->
+        <p>Make Appointemts</p>
+        <div class="appointmentsMobilePNG"></div>
+      </div>
     </main>
+
     <div class="whatWeDo">
       <div class="whatWeDoOne">
         <div class="whatWeDoTextBox">
