--- a/index.html
+++ b/index.html
@@ -43,23 +43,34 @@
       <p class="numberCover">507-580-9273</p>
       <div class="laquer"></div>
       <p class="laquerText">The science of Laquer</p>
-      <div class="triangleBox">
-        <div class="triangleAnim">
+      <div class="lineDownAnim"></div>
 
-        </div>
-      </div>
-      <div class="appointmentButton">
-        <p>Make an Appointment</p>
-        <div class="GO">
-          <p>GO</p>
-        </div>
-      </div>
       <div class="makeAppointentMobile"><!-- display only for mobile -->
-        <p>Make Appointemts</p>
+        <p>Schedule Appointemts</p>
         <div class="appointmentsMobilePNG"></div>
       </div>
     </main>
 
+    <div class="bridalSection">
+      <h4>WHAT <span>WE DO</span> </h4>
+      <div class="bridalImage">
+        <div class="bridalOne bridal"></div>
+        <div class="bridalTwo bridal"></div>
+        <div class="bridalThree bridal"></div>
+        <div class="bridalFour bridal"></div>
+        <div class="bridalOverLay">
+          <p class="bridalHugeFont">MANICURE</p>
+          <div class="allGenderText">
+            <p>ALL GENDERS. ALL AGES. ALL RACES</p>
+          </div>
+        </div>
+        <button type="button" name="button" class="moreInfoButton">more info</button>
+      </div>
+    </div>
+
+    <div class="whatWeSellBnd">
+      <h4>WHAT <span>WE SELL</span> </h4>
+    </div>
     <div class="whatWeDo">
       <div class="whatWeDoOne">
         <div class="whatWeDoTextBox">
@@ -77,8 +88,9 @@
         </div>
       </div>
     </div>
+
     <section class="specialOfferSection">
-      <h2>SPECIAL OFFER</h2>
+      <h4>SPECIAL <span>OFFER</span> </h4>
       <p class="favoriteProductP">Your favorite prduct at Special price</p>
       <div class="linePng"></div>
       <!-- grid -->
@@ -97,8 +109,24 @@
             </div>
           </div>
         </div>
+        <div class="mobileOnlySpecialOffer">
+          <h2>More <br> special Offers</h2>
+          <div class="triangleBox mobileDisplayTriangle">
+            <div class="triangleAnim">
+
+            </div>
+          </div>
+        </div>
+        <div class="mobileOnlyArrowsGrid">
+          <div class="mobileLeftArrow" >
+            <div class="mobileArrow"></div>
+          </div>
+          <div class="mobileRightArrow" >
+            <div class="mobileArrow"></div>
+          </div>
+        </div>
         <div class="gridBox">
-          <div class="olay">
+          <div class="olay gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -112,7 +140,7 @@
               </div>
             </div>
           </div>
-          <div class="sede">
+          <div class="sede gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -126,7 +154,7 @@
               </div>
             </div>
           </div>
-          <div class="gucci">
+          <div class="gucci gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -140,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="cc">
+          <div class="cc gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -154,7 +182,7 @@
               </div>
             </div>
           </div>
-          <div class="parfume">
+          <div class="parfume gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -168,7 +196,7 @@
               </div>
             </div>
           </div>
-          <div class="flower">
+          <div class="flower gridPicturesJS">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -182,6 +210,14 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="carouselDotsMobileOnly">
+          <div class="dots"></div>
+          <div class="dots"></div>
+          <div class="dots"></div>
+          <div class="dots"></div>
+          <div class="dots"></div>
+          <div class="dots"></div>
         </div>
         <div class="greatBuysButton">
           <p>MORE GREAT BUYS</p>
@@ -196,10 +232,14 @@
 
     <div class="specialSales">
       <div class="advertBox">
-        <div class="gradientYellow"></div>
+        <div class="blackDivOne"></div>
+        <div class="blackDivTwo"></div>
         <div class="pinkBag"></div>
         <p>Notify me of special sales</p>
-        <button type="button" name="button" class="advertButton">My email</button>
+        <div class="advertBoxButton">
+          <input type="text" name="" value="" placeholder="My email">
+          <div class="littleArrow"><span class="littleArroHtml">&#x279C;</span> </div>
+        </div>
       </div>
     </div>
 
@@ -213,37 +253,37 @@
         <div class="carContainer">
           <div class="blurBox"></div>
           <div class="carousel" id="carouselOne">
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicOne"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicTwo"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicThree"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicFour"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicFive"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicSix"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarOneDiv">
               <div class="firstCarPicSeven"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
@@ -252,6 +292,13 @@
         </div>
         <div class="rightCarArrowBox" id="carOneRightCarArrowBox">
           <div class="arrow"></div>
+        </div>
+        <div class="dotsCarOneMobileOnly">
+          <div class="dotsCarOne"></div>
+          <div class="dotsCarOne"></div>
+          <div class="dotsCarOne"></div>
+          <div class="dotsCarOne"></div>
+          <div class="dotsCarOne"></div>
         </div>
       </div>
       <div class="greatBuysButton">
@@ -273,37 +320,37 @@
         <div class="carContainer">
           <div class="blurBox"></div>
           <div class="carousel" id="carouselTwo">
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicOne"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicTwo"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicThree"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicFour"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicFive"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicSix"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
             </div>
-            <div class="carPicContainer">
+            <div class="carPicContainer mobileCarTwoDiv">
               <div class="firstCarPicSeven"></div>
               <p>$56.00</p>
               <p>Active Night Cream</p>
@@ -312,6 +359,13 @@
         </div>
         <div class="rightCarArrowBox" id="carTwoRightCarArrowBox">
           <div class="arrow"></div>
+        </div>
+        <div class="dotsCarTwoMobileOnly">
+          <div class="dotsCarTwo"></div>
+          <div class="dotsCarTwo"></div>
+          <div class="dotsCarTwo"></div>
+          <div class="dotsCarTwo"></div>
+          <div class="dotsCarTwo"></div>
         </div>
       </div>
       <div class="greatBuysButton">
@@ -408,7 +462,7 @@
                 <b><a href="#">Read More</a></b>
               </div>
             </div>
-            <div class="">
+            <div class="" id="hideMobile">
               <div class="carDivThree"></div>
               <div class="carThreeTextBox">
                 <div class="yellowSquareContainer">
