first anim wht we do

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="whatWeDo">
       <div class="whatWeDoOne">
         <div class="whatWeDoTextBox">
-          <p>What we Do</p>
+          <p class="fontFam">What we Do</p>
         </div>
       </div>
       <div class="whatWeDoTwo">
