big box car logic

--- a/index.html
+++ b/index.html
@@ -75,16 +75,22 @@
       <div class="whatWeDoOne">
         <div class="whatWeDoTextBox">
           <p class="fontFam">What we Do</p>
+          <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud
+              </p>
         </div>
       </div>
       <div class="whatWeDoTwo">
         <div class="whatWeDoTextBox">
-          <p>What we Do</p>
+          <p class="fontFam">What we Do</p>
         </div>
       </div>
       <div class="whatWeDoThree">
         <div class="whatWeDoTextBox">
-          <p>What we Do</p>
+          <p class="fontFam">What we Do</p>
         </div>
       </div>
     </div>
@@ -243,8 +249,15 @@
       </div>
     </div>
 
+<div class="threeCarBigBox">
+    <div class="carSelectBox">
+      <p class="selectOne">New arrivals /&nbsp;</p>
+      <p class="selectTwo"> Best Sellers /&nbsp;</p>
+      <p class="selectThree"> Trending Looks</p>
+    </div>
+
     <section class="newArrivals">
-      <h2>New Arrivals</h2>
+      <!-- <h2>New Arrivals</h2> -->
       <div class="carWraper">
         <div class="leftImage"></div>
         <div class="leftCarArrowBox" id="carOneLeftCarArrowBox">
@@ -310,8 +323,9 @@
       </div>
     </section>
     <!-- CAR TWO START -->
+
     <section class="newArrivals bestSellers">
-      <h2>Best Sellers</h2>
+      <!-- <h2>Best Sellers</h2> -->
       <div class="carWraper">
         <div class="leftImage"></div>
         <div class="leftCarArrowBox" id="carTwoLeftCarArrowBox">
@@ -378,7 +392,7 @@
     </section>
 
     <section class="newArrivals trendingLooksSection">
-      <h2>Trending Looks</h2>
+      <!-- <h2>Trending Looks</h2> -->
       <div class="carWraper">
         <div class="leftImage"></div>
         <div class="trendingThreePicWraper">
@@ -395,6 +409,8 @@
         </div>
       </div>
     </section>
+    <!-- closing big box -->
+  </div>
 
     <section class="instagramSection">
       <div class="gridBoxSpecial">
