big box car logic

--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
 
     <div class="bridalSection">
       <h4>WHAT <span>WE DO</span> </h4>
-      <div class="bridalImage">
-        <div class="bridalOne bridal"></div>
-        <div class="bridalTwo bridal"></div>
-        <div class="bridalThree bridal"></div>
-        <div class="bridalFour bridal"></div>
-        <div class="bridalOverLay">
-          <p class="bridalHugeFont">MANICURE</p>
-          <div class="allGenderText">
-            <p>ALL GENDERS. ALL AGES. ALL RACES</p>
+      <div class="bridalImageOrangeBox">
+        <div class="narrowDivBox">
+          <div class="narrowDiv"></div>
+        </div>
+        <div class="bridalImage">
+          <div class="bridalOne bridal"></div>
+          <div class="bridalTwo bridal"></div>
+          <div class="bridalThree bridal"></div>
+          <div class="bridalFour bridal"></div>
+          <div class="bridalOverLay">
+            <p class="bridalHugeFont">MANICURE</p>
+            <button type="button" name="button" class="allGenderText">Click to learn more</button>
           </div>
         </div>
-        <button type="button" name="button" class="moreInfoButton">more info</button>
       </div>
     </div>
 
@@ -72,7 +74,7 @@
       <h4>WHAT <span>WE SELL</span> </h4>
     </div>
     <div class="whatWeDo">
-      <div class="whatWeDoOne">
+      <div class="whatWeDoOne whatWeDoJS">
         <div class="whatWeDoTextBox">
           <p class="fontFam">What we Do</p>
           <p>Lorem ipsum dolor sit amet,
@@ -83,14 +85,26 @@
               </p>
         </div>
       </div>
-      <div class="whatWeDoTwo">
+      <div class="whatWeDoTwo whatWeDoJS">
         <div class="whatWeDoTextBox">
           <p class="fontFam">What we Do</p>
+          <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud
+              </p>
         </div>
       </div>
-      <div class="whatWeDoThree">
+      <div class="whatWeDoThree whatWeDoJS">
         <div class="whatWeDoTextBox">
           <p class="fontFam">What we Do</p>
+          <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud
+              </p>
         </div>
       </div>
     </div>
