--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <p>Notify me of special sales</p>
         <div class="advertBoxButton">
           <input type="text" name="" value="" placeholder="My email">
-          <div class="littleArrow"><span class="littleArroHtml">&#x279C;</span> </div>
+          <div class="littleArrow"><span class="littleArroHtml">&#x27A4;</span> </div>
         </div>
       </div>
     </div>
