wholla lotta of change

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
   </head>
   <body>
     <!-- sticky start -->
+    <div class="stickyBackgroundLayer">
+      <div class="stickyBgInLayer"></div>
+    </div>
     <div class="stickyMenu">
       <div class="stickyMenuInside">
+        <div class="BEYOUTY"></div>
         <div class="stickyTodaysSpecial">
-          <p>Today's Special</p>
+          <p>TODAY'S OFFER</p>
+        </div>
+        <div class="carBox">
+          <p>3</p>
+          <div class="cart"></div>
         </div>
         <div class="stickyMenuNav">
-          <a href="#">Home</a>
-          <a href="#">Shop</a>
-          <a href="#">Blog</a>
-          <a href="#">About us</a>
-          <a href="#">Contact</a>
-        </div>
-        <div class="stickySocialMedia" id="stickySocialMedia">
-          <div class="fa fa-facebook"></div>
-          <div class="fa fa-twitter"></div>
-          <div class="fa fa-instagram"></div>
+          <a href="#">SHOP</a>
+          <a href="#">ABOUT US</a>
+          <a href="#">CONTACT</a>
         </div>
         <div class="stickyLogin">
           <p>Login</p>
@@ -39,16 +40,12 @@
     </div>
     <!-- sticky end -->
     <main>
-      <div class="nailsPng"></div>
-      <p class="numberCover">507-580-9273</p>
-      <div class="laquer"></div>
-      <p class="laquerText">The science of Laquer</p>
-      <div class="lineDownAnim"></div>
-
-      <div class="makeAppointentMobile"><!-- display only for mobile -->
-        <p>Schedule Appointemts</p>
-        <div class="appointmentsMobilePNG"></div>
-      </div>
+      <img class="girl" src="assets/img/png/girl.png" alt="picture of dior">
+      <img class="dior" src="assets/img/png/dior.png" alt="picture of dior">
+      <img class="crayon" src="assets/img/png/crayon.png" alt="picture of dior">
+      <img class="crayonShadow" src="assets/img/png/crayonShadow.png" alt="picture of dior">
+      <img class="browBrush" src="assets/img/png/browBrush.png" alt="eyebrow brush">
+      <img class="eyeBrush" src="assets/img/png/eyeBrush.png" alt="picture of dior">
     </main>
 
     <div class="bridalSection">
@@ -154,9 +151,9 @@
                 <p>Active Night Cream</p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked fa-3x"></span>
+                <span class="fa fa-star-half-o checked "></span>
+                <span class="fa fa-star unchecked"></span>
               </div>
             </div>
           </div>
